--- a/dynamic_generation/Cargo.toml
+++ b/dynamic_generation/Cargo.toml
@@ -1,9 +1,13 @@
 [package]
-name = "rust-component-architecture"
+name = "dynamic_generation"
 version = "0.1.0"
 authors = ["Chris Hulme <chris_hulme99@outlook.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[lib]
+proc-macro = true
+
 [dependencies]
-dynamic_generation = { path = "dynamic_generation" }
+convert_case = "0.4.0"
