--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,9 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
 dynamic_generation = { path = "src/dynamic_generation" }
+actix-web = "3"
+env_logger = "0.8"
+reqwest = "0.9"
+serde_json = "1.0"
+futures = "0.1"
+json = "*"
