--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ dynamic_generation = { path = "src/dynamic_generation" }
 actix-web = "3"
 env_logger = "0.8"
 reqwest = "0.9"
+serde_with = "*"
+serde = "*"
 serde_json = "1.0"
 futures = "0.1"
-json = "*"
