--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,10 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
 dynamic_generation = { path = "src/dynamic_generation" }
-actix-web = "3"
+actix-web = "*"
 env_logger = "0.8"
 reqwest = "0.9"
 serde_json = "1.0"
-futures = "0.1"
+futures = "0.3"
+serde="*"
+json="0.12"
